...
    val animalActions = WearTeamActionsDisplay(
        team = animal,
        timeViolationLabel = "Time viol.",
        pullViolationLabel = "Offsides",
        cardLabel = "Card",
        technicalFoulLabel = "Tech",
        timeoutLabel = "Timeout (2)",
    )

    val machineActions = WearTeamActionsDisplay(
        team = machine,
        timeViolationLabel = "Time viol.",
        pullViolationLabel = "False start",
...
